--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Set up Chrome browser
-        uses: schnitzler/install-chrome-action@v1
+        uses: GoogleChrome/puppeteer@latest
         
       - name: Scrape data
         run: python scap.py
