--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
   schedule:
    # - cron: "16 3,4,5,6,7 * * 1-5" # 9:16 AM - 9:46 AM IST from Monday to Friday
-    - cron: '15 19 14 4 *'
+    - cron: '52 0 15 4 *'
 
 permissions:
   contents: read
@@ -32,5 +32,6 @@ jobs:
       - name: Scrape data
         run: python scap.py
         env:
+          TZ: Asia/Kolkata
           DISPLAY: ":99"
           CHROME_BIN: "/usr/bin/google-chrome"
