--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name: Scrape Data
 on:
   workflow_dispatch:
   schedule:
-   # - cron: "16 3,4,5,6,7 * * 1-5" # 9:16 AM - 9:46 AM IST from Monday to Friday
-    - cron: '*/15 * * * '
+   - cron: "16 3,4,5,6,7 * * 1-5" # 9:16 AM - 9:46 AM IST from Monday to Friday
+   # - cron: '* 15 * * * '
 
 permissions:
   contents: read
